--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Filmforest.NoActionBar">
+        <activity android:name=".MainActivity3"></activity>
         <activity android:name=".MainActivity2"></activity>
         <activity android:name=".SplashActivity">
             <intent-filter>
